--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -56,5 +56,7 @@ end
 group :test do
   gem "rspec-rails"
   gem "coveralls", require: false
+  gem 'capybara', '~> 2.5.0'
+  gem 'selenium-webdriver'
 end
 
