--- a/.eslintignore
+++ b/.eslintignore
@@ -2,6 +2,5 @@ node_modules
 coverage
 spec/react_on_rails/dummy-for-generators
 spec/dummy
-spec/dummy-react-013
 node_package/lib/
-
+node_package/webpack.config.js
