--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-on-rails",
   "version": "0.0.0",
   "description": "react-on-rails JavaScript for react_on_rails Ruby gem",
-  "main": "node_package/lib/react_on_rails.js",
+  "main": "node_package/lib/ReactOnRails.js",
   "directories": {
     "doc": "docs"
   },
@@ -12,9 +12,11 @@
   },
   "devDependencies": {
     "babel": "^6.3.13",
+    "babel-cli": "^6.3.17",
     "babel-core": "^6.3.17",
     "babel-eslint": "^5.0.0-beta4",
     "babel-loader": "^6.2.0",
+    "babel-plugin-transform-runtime": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
@@ -25,13 +27,12 @@
     "eslint-plugin-babel": "^3.0.0",
     "eslint-plugin-react": "^3.11.3",
     "jscs": "^2.6.0",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
     "tape": "^4.2.2",
     "webpack": "^1.12.9"
   },
   "peerDependencies": {
-    "react": ">= 0.13"
+    "react": ">= 0.14",
+    "react-dom": ">= 0.14"
   },
   "files": [
     "node_package/lib"
