Refactored to small js files

--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@ rules:
   ### Stylistic issues
   indent: [1, 2, { SwitchCase: 1, VariableDeclarator: 2 }]
   id-length: [1, { min: 2, exceptions: [_, e, i, k, v] }]
+  no-console: 0
 
   ### React
   jsx-quotes: [1, prefer-double]
