--- a/spec/dummy/client/package.json
+++ b/spec/dummy/client/package.json
@@ -17,6 +17,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "es5-shim": "^4.4.1",
     "expose-loader": "^0.7.1",
     "history": "^1.17.0",
     "node-libs-browser": "^0.5.3",
