Auto detection of generator function!
Only issue is that node_package/tests depend on react
and if I install react at the top level, I can't depend on that for
spec/dummy integration tests, or else I get the double inclusion of
react issue.

--- a/.eslintignore
+++ b/.eslintignore
@@ -3,4 +3,5 @@ coverage
 spec/react_on_rails/dummy-for-generators
 spec/dummy
 node_package/lib/
+node_package/tests/node_modules
 node_package/webpack.config.js
