--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "doc": "docs"
   },
   "dependencies": {
-    "babel-polyfill": "^6.3.14",
-    "babel-runtime": "^6.3.13"
   },
   "devDependencies": {
     "babel": "^6.3.13",
@@ -20,14 +18,17 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "babel-runtime": "^6.3.13",
     "babel-tape-runner": "^2.0.0",
+    "babelify": "^7.2.0",
     "blue-tape": "^0.1.11",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^2.0.0",
     "eslint-plugin-babel": "^3.0.0",
     "eslint-plugin-react": "^3.11.3",
     "jscs": "^2.6.0",
-    "tape": "^4.2.2",
+    "tap-spec": "^4.1.1",
+    "tape": "^4.4.0",
     "webpack": "^1.12.9"
   },
   "peerDependencies": {
@@ -40,6 +41,7 @@
   "scripts": {
     "test": "node_package/scripts/test",
     "clean": "node_package/scripts/clean",
+    "prepublish": "npm run build",
     "build": "node_package/scripts/build",
     "lint": "node_package/scripts/lint",
     "check": "npm run lint && npm run test",
