Woo hoo! Solved issues with running tests
Previously, we could not have react installed as a devDependency at the
top level with react-on-rails, or else we get an obscure 'react is
included multiple times' error.

Fix is to add this to the webpack configs:

  resolve: {
    root: [path.join(__dirname, 'app')],
    extensions: ['', '.js', '.jsx'],
    fallback: [path.join(__dirname, 'node_modules')],
    alias: {
      react: path.resolve('./node_modules/react'),
      "react-dom": path.resolve('./node_modules/react-dom'),
    },
  },

That ensures that react is only loaded from one place.

Also cleaned up linting and test scripts so that it's easier to run all
the tests.

Main things pending:

* Finish up the changes to the generators
* Doc updates
* Some more JS tests

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "eslint-plugin-babel": "^3.0.0",
     "eslint-plugin-react": "^3.11.3",
     "jscs": "^2.6.0",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "tap-spec": "^4.1.1",
     "tape": "^4.4.0",
     "webpack": "^1.12.9"
@@ -43,7 +45,7 @@
     "clean": "node_package/scripts/clean",
     "prepublish": "npm run build",
     "build": "node_package/scripts/build",
-    "lint": "node_package/scripts/lint",
+    "lint": "node_package/scripts/lint && cd spec/dummy/client && npm run lint",
     "check": "npm run lint && npm run test",
     "prerelease": "npm run check && npm run clean && npm run build",
     "release:patch": "node_package/scripts/release patch",
