rename refresh script to symlink_node_package

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ install:
 before_script:
   - "export DISPLAY=:99"
   - Xvfb :99 -ac -screen scn 1600x1200x16 &
+  - npm run symlink_node_package
 
 script:
   - rake
