Fix linting issues

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,11 +8,13 @@ AllCops:
   Exclude:
     - 'vendor/**/*'
     - 'spec/fixtures/**/*'
+    - 'node_modules/**/*.*'
     - 'node_modules/**/*'
     - 'coverage/**/*'
     - 'db/**/*'
     - 'db/schema.rb'
     - 'db/seeds.rb'
+    - 'client/node_modules/**/*.*'
     - 'client/node_modules/**/*'
     - 'bin/**/*'
     - !ruby/regexp /old_and_unused\.rb$/
