--- a/spec/dummy/client/.babelrc
+++ b/spec/dummy/client/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["es2015", "stage-0", "react"],
-  "plugins": ["syntax-decorators"]
+  "plugins": ["syntax-decorators", "babel-relay-plugin-loader"]
 }
