--- a/spec/dummy/client/package.json
+++ b/spec/dummy/client/package.json
@@ -8,35 +8,35 @@
   },
   "main": "js/app.js",
   "dependencies": {
-    "babel": "^6.5.1",
-    "babel-cli": "^6.5.1",
-    "babel-core": "^6.5.1",
-    "babel-loader": "^6.2.2",
-    "babel-polyfill": "^6.5.0",
-    "babel-preset-es2015": "^6.5.0",
+    "babel": "^6.5.2",
+    "babel-cli": "^6.6.5",
+    "babel-core": "^6.6.5",
+    "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.6.1",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "es5-shim": "^4.5.2",
+    "es5-shim": "^4.5.7",
     "expose-loader": "^0.7.1",
-    "history": "^2.0.0-rc2",
-    "jquery": "^2.2.0",
+    "history": "^2.0.1",
+    "jquery": "^2.2.1",
     "jquery-ujs": "^1.2.0",
     "node-libs-browser": "^1.0.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-on-rails": "../../..",
-    "react-redux": "^4.1.2",
+    "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
-    "redux": "^3.1.7",
+    "redux": "^3.3.1",
     "redux-thunk": "^1.0.3",
-    "webpack": "^1.12.12"
+    "webpack": "^1.12.14"
   },
   "devDependencies": {
-    "babel-eslint": "^5.0.0-beta8",
-    "eslint": "^1.10.3",
-    "eslint-config-airbnb": "5.0.0",
-    "eslint-plugin-react": "^3.16.1",
-    "jscs": "^2.9.0"
+    "babel-eslint": "^5.0.0",
+    "eslint": "^2.3.0",
+    "eslint-config-airbnb": "6.1.0",
+    "eslint-plugin-react": "^4.2.0",
+    "jscs": "^2.11.0"
   },
   "browser": {
     "fs": false
