--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -72,10 +72,10 @@ group :test do
   gem "coveralls", require: false
   gem "capybara"
   gem "capybara-screenshot"
-  gem "selenium-webdriver"
-  gem "chromedriver-helper"
-  gem "launchy"
-  gem "generator_spec"
-  gem "poltergeist"
   gem "capybara-webkit"
+  gem "chromedriver-helper", require: ["selenium_chrome"].include?(ENV["DRIVER"])
+  gem "generator_spec"
+  gem "launchy"
+  gem "poltergeist"
+  gem "selenium-webdriver", require: !["poltergeist", "poltergeist_errors_ok", "webkit"].include?(ENV["DRIVER"])
 end
