Numerous fixes, some with deprecations
* Change generators to use app/assets/webpack as the generation
  directory might contain CSS.
* Numerous improvements in the verification that the webpack created
  assets are up to date before running tests.
* Several new configuration options and changes to the configuration:
  # Directory where your generated assets go
  config.generated_assets_dir = File.join(%w(app assets webpack))

  # Define the files for we need to check for webpack compilation when running tests
  config.webpack_generated_files = %w( app-bundle.js vendor-bundle.js server-bundle.js )

* config.server_bundle_js_file no longer uses a path, as it can only
  exist in the generated_assets_dir.
* redux_store view helper now requires the props to be specified as a
  named parameter, an it takes an option `defer` to allow rendering at
  the bottom of the layout.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,9 +2,12 @@
 # Check out: https://github.com/bbatsov/rubocop
 
 AllCops:
+  TargetRubyVersion: 2.1
+
   Include:
     - '**/Rakefile'
     - '**/config.ru'
+
   Exclude:
     - 'vendor/**/*'
     - 'spec/fixtures/**/*'
