--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-on-rails",
+  "name": "react-relay-on-rails",
   "version": "4.0.0",
-  "description": "react-on-rails JavaScript for react_on_rails Ruby gem",
+  "description": "react-relay-on-rails JavaScript for react_on_rails Ruby gem",
   "main": "node_package/lib/ReactOnRails.js",
   "directories": {
     "doc": "docs"
