--- a/package.json
+++ b/package.json
@@ -27,8 +27,6 @@
     "eslint-plugin-react": "^3.16.1",
     "jscs": "^2.9.0",
     "jsdom": "^8.0.2",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
     "react-transform-hmr": "^1.0.1",
     "redux": "^3.3.1",
     "release-it": "^2.3.1",
@@ -37,8 +35,10 @@
     "webpack": "^1.12.12"
   },
   "peerDependencies": {
-    "react": ">= 0.14",
-    "react-dom": ">= 0.14"
+    "react": ">= 15.0.2",
+    "react-dom": ">= 15.0.2",
+    "babel-relay-plugin": "^0.8.1",
+    "react-relay": "^0.8.1"
   },
   "files": [
     "node_package/lib"
@@ -79,9 +79,5 @@
   "bugs": {
     "url": "https://github.com/gauravtiwari/react_on_rails/issues"
   },
-  "homepage": "https://github.com/gauravtiwari/react_on_rails#readme",
-  "dependencies": {
-    "babel-relay-plugin": "^0.7.1",
-    "react-relay": "^0.7.1"
-  }
+  "homepage": "https://github.com/gauravtiwari/react_on_rails#readme"
 }
