--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "clean": "node_package/scripts/clean",
     "prepublish": "npm run build",
     "build": "node_package/scripts/build",
-    "build-watch": "$(npm bin)/babel --watch --out-dir node_package/lib node_package/src",
-    "eslint": "$(npm bin)/eslint . --ext .jsx and .js",
-    "jscs": "$(npm bin)/jscs . -e -v",
+    "build-watch": "babel --watch --out-dir node_package/lib node_package/src",
+    "eslint": "eslint .",
+    "jscs": "jscs -e -v .",
     "lint": "npm run eslint && npm run jscs",
     "lint:fix": "node_package/scripts/lint-fix",
     "check": "npm run lint && npm run test",
