Update eslint* packages and fix new linting issues

--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "babel-types": "^6.7.2",
     "babelify": "^7.2.0",
     "blue-tape": "^0.2.0",
-    "eslint": "^2.6.0",
-    "eslint-config-shakacode": "4.0.0",
-    "eslint-plugin-react": "^4.2.3",
+    "eslint": "^3.3.1",
+    "eslint-config-shakacode": "^6.0.0",
+    "eslint-plugin-import": "^1.13.0",
+    "eslint-plugin-jsx-a11y": "^2.1.0",
+    "eslint-plugin-react": "^6.1.2",
     "jscs": "^2.11.0",
     "jsdom": "^8.2.0",
     "react": "^15.0.0",
