--- a/package.json
+++ b/package.json
@@ -49,23 +49,23 @@
   "scripts": {
     "test": "babel-tape-runner -r node_package/tests/helpers/test_helper.js node_package/tests/*.js | tap-spec",
     "clean": "rm -rf node_package/lib",
-    "prepublish": "npm run build",
+    "prepublish": "yarn run build",
     "babel": "babel --out-dir node_package/lib node_package/src",
-    "build": "npm run clean && npm run babel",
+    "build": "yarn run clean && yarn run babel",
     "build-watch": "babel --watch --out-dir node_package/lib node_package/src",
     "eslint": "eslint .",
     "jscs": "jscs -e -v .",
     "flow": "flow check node_package",
-    "lint": "npm run eslint && npm run jscs && npm run flow",
+    "lint": "yarn run eslint && yarn run jscs && yarn run flow",
     "lint:fix": "node_package/scripts/lint-fix",
-    "check": "npm run lint && npm run test",
-    "prerelease": "npm run check && npm run clean && npm run build",
+    "check": "yarn run lint && yarn run test",
+    "prerelease": "yarn run check && yarn run clean && yarn run build",
     "release:patch": "node_package/scripts/release patch",
     "release:minor": "node_package/scripts/release minor",
     "release:major": "node_package/scripts/release major",
     "dummy:install": "rake dummy_apps",
     "dummy:spec": "rake run_rspec:dummy",
-    "local": "echo 'Be sure to run npm run dummy:install' && npm run build && cd spec/dummy && foreman start"
+    "local": "echo 'Be sure to run yarn run dummy:install' && yarn run build && cd spec/dummy && foreman start"
   },
   "repository": {
     "type": "git",
