--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "build-watch": "babel --watch --out-dir node_package/lib node_package/src",
     "eslint": "eslint .",
     "flow": "flow check node_package",
-    "lint": "npm run eslint && npm run flow",
-    "check": "npm run lint && npm run test",
+    "lint": "npm run eslint",
+    "check": "npm run lint && npm run flow && npm run test",
     "prerelease": "npm run check && npm run clean && npm run build",
     "release:patch": "node_package/scripts/release patch",
     "release:minor": "node_package/scripts/release minor",
