--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ before_install:
 install:
   - nvm install node
   - node -v
+  - npm install -g npm@3.10.7
   - npm config set spin false
   - npm install
   - bundle install
