--- a/spec/dummy/client/package.json
+++ b/spec/dummy/client/package.json
@@ -50,8 +50,10 @@
     "babel-plugin-react-transform": "^2.0.2",
     "body-parser": "^1.15.2",
     "eslint": "^3.8.1",
-    "eslint-config-shakacode": "^6.0.0",
-    "eslint-plugin-react": "^6.4.1",
+    "eslint-config-shakacode": "^13.2.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.8.0",
     "fbjs": "^0.8.5",
     "jsdom": "^9.8.0",
     "react-transform-hmr": "^1.0.4",
