--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "build-watch": "babel --watch --out-dir node_package/lib node_package/src",
     "eslint": "eslint .",
     "flow": "flow check node_package",
-    "lint": "yarn run eslint && yarn run jscs && yarn run flow",
+    "lint": "yarn run eslint && yarn run flow",
     "check": "yarn run lint && yarn run flow && yarn run test",
     "prerelease": "yarn run check && yarn run clean && yarn run build",
     "release:patch": "node_package/scripts/release patch",
