Expanded .gitignore to include more OS Files and various IDE files

--- a/.gitignore
+++ b/.gitignore
@@ -29,4 +29,13 @@ spec/dummy/client/npm-debug.log*
 
 /gen-examples
 
+# OS Files
 .DS_Store
+._.DS_Store
+.directory
+
+# Text-editor/IDE generated files
+*.sublime-workspace
+*.sublime-project
+/.idea
+*.iml
