--- a/spec/dummy/client/package.json
+++ b/spec/dummy/client/package.json
@@ -67,12 +67,12 @@
     "eslint": "eslint --ext .js,.jsx .",
     "test": "yarn run build:test && rspec",
     "build:test": "yarn run build:client && yarn run build:server",
-    "build:production:client": "NODE_ENV=production webpack --config webpack.client.rails.build.config.js",
-    "build:production:server": "NODE_ENV=production webpack --config webpack.server.rails.build.config.js",
-    "build:client": "webpack --config webpack.client.rails.build.config.js",
+    "build:production:client": "NODE_ENV=production webpack --bail --config webpack.client.rails.build.config.js",
+    "build:production:server": "NODE_ENV=production webpack --bail --config webpack.server.rails.build.config.js",
+    "build:client": "webpack --bail --config webpack.client.rails.build.config.js",
     "build:dev:client": "webpack -w --config webpack.client.rails.build.config.js",
     "build:dev:server": "webpack -w --config webpack.server.rails.build.config.js",
-    "build:server": "webpack --config webpack.server.rails.build.config.js",
+    "build:server": "webpack --bail --config webpack.server.rails.build.config.js",
     "hot-assets": "babel-node server-rails-hot.js",
     "install-react-on-rails": "yarn 'file:../../..'"
   },
