--- a/spec/dummy/client/package.json
+++ b/spec/dummy/client/package.json
@@ -34,6 +34,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-on-rails": "file:../../..",
+    "react-proptypes": "^0.0.1",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
