--- a/spec/dummy/client/package.json
+++ b/spec/dummy/client/package.json
@@ -36,7 +36,7 @@
     "react-on-rails": "file:../../..",
     "react-proptypes": "^0.0.1",
     "react-redux": "^5.0.4",
-    "react-router": "^4.1.0",
+    "react-router": "3.0.5",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "resolve-url-loader": "^2.0.2",
