Dummy app now depends on react_on_rails gem from rubygems and gem cleanup

--- a/react_on_rails_pro/spec/dummy/Gemfile
+++ b/react_on_rails_pro/spec/dummy/Gemfile
@@ -41,7 +41,7 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
-gem "react_on_rails", path: "../.."
+gem "react_on_rails"
 
 gem "mini_racer"
 
