--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
-eval_gemfile File.expand_path("../../../react_on_rails.gemspec", __FILE__)
+eval_gemfile File.expand_path("../../../react_on_rails_renderer.gemspec", __FILE__)
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails'
