--- a/react_on_rails_pro/package.json
+++ b/react_on_rails_pro/package.json
@@ -29,6 +29,7 @@
     "eslint-config-shakacode": "^14.1.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
     "flow-bin": "^0.43.1",
     "jsdom": "^9.12.0",
     "release-it": "^2.7.1",
