Final fixes for v7.1.0
* Removed unnecessary rake task for running specs
* Fixed inconsistency with using "-bundle" only some of the time.
* Removed unused node_modules value in paths.yml
* Upgraded to webpacker_lite 1.0.0

--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -43,7 +43,7 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 
 gem "react_on_rails", path: "../.."
 
-gem "webpacker_lite", "0.0.5"
+gem "webpacker_lite"
 
 gem "mini_racer"
 
