--- a/react_on_rails_pro/package.json
+++ b/react_on_rails_pro/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "body-parser": "^1.17.1",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "vm2": "^3.4.6"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
