--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "express": "^4.15.2",
     "express-busboy": "^6.0.1",
+    "fs-extra": "^3.0.1",
     "mv": "^2.1.1",
     "vm2": "^3.4.6"
   },
