--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -19,7 +19,7 @@
     "build:server": "(cd client && yarn run build:server --silent)",
     "build:dev:client": "(cd client && yarn run build:dev:client --silent)",
     "build:dev:server": "(cd client && yarn run build:dev:server --silent)",
-    "node-renderer": "(cd ../../ && yarn run start)",
+    "node-renderer": "(cd client && yarn run node-renderer)",
     "hot-assets": "(cd client && yarn run hot-assets)"
   },
   "repository": {
