--- a/spec/dummy/client/package.json
+++ b/spec/dummy/client/package.json
@@ -77,7 +77,7 @@
     "build:server": "webpack --config webpack.server.rails.build.config.js",
     "hot-assets": "babel-node server-rails-hot.js",
     "install-react-on-rails": "rm -rf node_modules/react-on-rails && npm i 'file:../../..'",
-    "node-renderer": "node renderer.js -p 3800"
+    "node-renderer": "node renderer.js"
   },
   "author": "",
   "license": "ISC"
