--- a/react_on_rails_pro/spec/dummy/Gemfile
+++ b/react_on_rails_pro/spec/dummy/Gemfile
@@ -1,4 +1,4 @@
-source 'https://rubygems.org'
+source "https://rubygems.org"
 
 eval_gemfile File.expand_path("../../../react_on_rails_renderer.gemspec", __FILE__)
 
@@ -43,8 +43,6 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 
 gem "react_on_rails_renderer", path: "../.."
 gem "react_on_rails"
-
-# gem "mini_racer"
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
