--- a/react_on_rails_pro/spec/dummy/package.json
+++ b/react_on_rails_pro/spec/dummy/package.json
@@ -11,7 +11,7 @@
     "gulp": "cd ./client && yarn run gulp",
     "test": "yarn run build:test && yarn run lint && rspec",
     "lint": "cd client && yarn run lint",
-    "install-react-on-rails": "cd client && yarn run install-react-on-rails",
+    "install-react-on-rails-renderer": "cd client && yarn run install-react-on-rails-renderer",
     "build:clean": "rm -r app/assets/webpack/* || true",
     "build:production:client": "(cd client && yarn run build:production:client --silent)",
     "build:production:server": "(cd client && yarn run build:production:server --silent)",
