--- a/spec/dummy/client/package.json
+++ b/spec/dummy/client/package.json
@@ -31,12 +31,12 @@
     "node-libs-browser": "^2.0.0",
     "node-sass": "^4.5.2",
     "postcss-loader": "^1.3.3",
+    "prop-types": "^15.5.9",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-helmet": "^5.0.3",
     "react-on-rails": "7.0.4",
     "react-on-rails-renderer": "file:../../..",
-    "react-proptypes": "^0.0.1",
     "react-redux": "^5.0.4",
     "react-router": "3.0.5",
     "redux": "^3.6.0",
