--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.15.2",
     "express-busboy": "^6.0.1",
     "fs-extra": "^3.0.1",
+    "sandboxed-module": "^2.0.3",
     "vm2": "^3.4.6"
   },
   "devDependencies": {
