--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -43,7 +43,7 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 
 gem "react_on_rails", path: "../.."
 
-gem "webpacker_lite"
+gem "webpacker_lite", path: "../../../webpacker_lite"
 
 gem "mini_racer"
 
