--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "doc": "docs"
   },
   "dependencies": {
+    "body-parser": "^1.17.2",
     "console.history": "^1.5.0",
     "express": "^4.15.2",
     "express-busboy": "^6.0.1",
