WIP, use with webpacker lite
Sync with this branch: https://github.com/shakacode/webpacker_lite/tree/better-errors

--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -13,7 +13,7 @@
     "install-react-on-rails": "cd client && yarn run install-react-on-rails",
     "build:clean": "rm -rf public/webpack || true",
 
-    "comment": "talk to rob about cleaning up",
+    "comment": "conturbo talk to rob about cleaning up",
 
     "build:production:client": "(cd client && yarn run build:production:client --silent)",
     "build:production:server": "(cd client && yarn run build:production:server --silent)",
