Updated for webpacker_lite 2.0.2

--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -44,7 +44,7 @@ gem "sdoc", "~> 0.4.0", group: :doc
 gem "react_on_rails", path: "../.."
 
 # TODO: conturbo create a minimal copy of /spec/dummy called /spec/dummy_no_webpacker_lite, to verify
-gem "webpacker_lite", path: "../../../webpacker_lite"   #"~> 2.0"
+gem "webpacker_lite", "2.0.2" # "../../../webpacker_lite"
 
 gem "mini_racer"
 
