--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -43,8 +43,7 @@ gem "sdoc", "~> 0.4.0", group: :doc
 
 gem "react_on_rails", path: "../.."
 
-# TODO: conturbo create a minimal copy of /spec/dummy called /spec/dummy_no_webpacker_lite, to verify
-gem "webpacker_lite", "2.0.2" # "../../../webpacker_lite"
+gem "webpacker_lite", "2.0.2"
 
 gem "mini_racer"
 
