--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -41,7 +41,8 @@ gem "sdoc", group: :doc
 
 gem "react_on_rails", path: "../.."
 
-gem "webpacker_lite", "2.1.0"
+gem "webpacker", git: "https://github.com/shakacode/webpacker.git",
+                 branch: "issue-464-merge-webpacker-lite-into-webpacker"
 
 gem "mini_racer"
 
