Fix Procfile.dev and spec/dummy hot
* Update migration instructions
* Change the HMR setting for spec/dummy
* Change the default webpacker.yml config to temporarily turn off live
  reloading.
* Change to depending on latest rails/webpacker fork to allow overriding
  the dev_server setting in the webpacker.yml file.

--- a/lib/generators/react_on_rails/templates/base/base/config/webpacker.yml
+++ b/lib/generators/react_on_rails/templates/base/base/config/webpacker.yml
@@ -8,12 +8,13 @@ development:
   # generated files for development, in /public/webpack/development
   public_output_path: webpack/development
 
-  dev_server:
-    host: localhost
-    port: 8080
-    https: false
-    # Can be enabled by export WEBPACKER_HMR=TRUE in env
-    hot: false
+#  Temporarily disabling live-reloading until the server script is added.
+#  dev_server:
+#    host: localhost
+#    port: 8080
+#    https: false
+#    # Can be enabled by export WEBPACKER_HMR=TRUE in env
+#    hot: false
 
 test:
   <<: *default
