--- a/spec/dummy/config/webpacker.yml
+++ b/spec/dummy/config/webpacker.yml
@@ -13,7 +13,7 @@ development:
     port: 8080
     https: false
     # Can be enabled by export WEBPACKER_HMR=TRUE in env
-    hot: false
+    hmr: false
 
 test:
   <<: *default
