--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -7,7 +7,10 @@ eval_gemfile File.expand_path("../../../react_on_rails.gemspec", __FILE__)
 gem "react_on_rails", path: "../.."
 
 gem "webpacker", git: "https://github.com/shakacode/webpacker.git",
-                 branch: "issue-464-merge-webpacker-lite-into-webpacker"
+                 branch: "issue-464-merge-webpacker-lite-into-webpacker-v2"
+
+# TODO: remove once we get out of beta.
+# gem 'webpacker', path: "../../../../forks/webpacker"
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem "rails", "~> 5.1.2"
