--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ rvm:
   # Rails 5 requires 2.2
   - 2.3.1
   - 2.4.1
+  - 2.1.10
 services:
   - docker
 
@@ -17,6 +18,7 @@ cache:
 
 gemfile:
   - spec/dummy/Gemfile
+  - Gemfile.rails32
 
 env:
   global:
@@ -48,6 +50,15 @@ before_script:
 
 script:
   - bundle exec rake
+
+matrix:
+  exclude:
+    - gemfile: Gemfile.rails32
+      rvm: 2.3.1
+    - gemfile: Gemfile.rails32
+      rvm: 2.4.1
+    - gemfile: spec/dummy/Gemfile
+      rvm: 2.1.10
 
 notifications:
   slack:
