--- a/lib/generators/react_on_rails/templates/node/base/client/node/package.json
+++ b/lib/generators/react_on_rails/templates/node/base/client/node/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-      "start": "node ./server.js -s webpack-bundle.js"
+      "start": "node ./server.js -s hello-world-bundle.js"
   },
   "dependencies": {
   }
