Add custom_compile setting for webpacker.yml
The custom compile setting is necessary to prevent the default
pre-compile task from running.

--- a/lib/generators/react_on_rails/templates/base/base/config/webpacker.yml
+++ b/lib/generators/react_on_rails/templates/base/base/config/webpacker.yml
@@ -2,6 +2,7 @@
 default: &default
   # Critical to set compile as false for React on Rails projects
   compile: false
+  custom_compile: true
 
 development:
   <<: *default
@@ -21,5 +22,5 @@ test:
 
 production:
   <<: *default
-  # generated files for tests, in /public/webpack/production
+  # generated files for production, in /public/webpack/production
   public_output_path: webpack/production
