--- a/spec/dummy/config/webpacker.yml
+++ b/spec/dummy/config/webpacker.yml
@@ -2,6 +2,7 @@
 default: &default
   # Critical to set compile as false for React on Rails projects
   compile: false
+  custom_compile: true
 
 development:
   <<: *default
@@ -16,10 +17,10 @@ development:
 
 test:
   <<: *default
-  # generated files for tests, in /public/webpack/test
+  # generated files for test, in /public/webpack/test
   public_output_path: webpack/test
 
 production:
   <<: *default
-  # generated files for tests, in /public/webpack/production
+  # generated files for production, in /public/webpack/production
   public_output_path: webpack/production
