--- a/spec/dummy/config/webpacker.yml
+++ b/spec/dummy/config/webpacker.yml
@@ -3,6 +3,8 @@ default: &default
   # Critical to set compile as false for React on Rails projects
   compile: false
   custom_compile: true
+  # Cache manifest.json for performance
+  cache_manifest: false
 
 development:
   <<: *default
@@ -24,3 +26,4 @@ production:
   <<: *default
   # generated files for production, in /public/webpack/production
   public_output_path: webpack/production
+  cache_manifest: true
