--- a/spec/dummy/config/webpacker.yml
+++ b/spec/dummy/config/webpacker.yml
@@ -14,8 +14,7 @@ development:
   dev_server:
     host: localhost
     port: 3035
-    # Can be enabled by export WEBPACKER_HMR=TRUE in env
-    hmr: false
+    hmr: true
 
 test:
   <<: *default
