--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ rvm:
   # Rails 5 requires 2.2
   - 2.3.1
   - 2.4.1
-  - 2.1.10
+  - 2.2.6
 services:
   - docker
 
@@ -18,7 +18,7 @@ cache:
 
 gemfile:
   - spec/dummy/Gemfile
-  - Gemfile.rails32
+  - spec/dummy_no_webpacker/Gemfile.rails32
 
 env:
   global:
@@ -53,12 +53,12 @@ script:
 
 matrix:
   exclude:
-    - gemfile: Gemfile.rails32
+    - gemfile: spec/dummy_no_webpacker/Gemfile.rails32
       rvm: 2.3.1
-    - gemfile: Gemfile.rails32
+    - gemfile: spec/dummy_no_webpacker/Gemfile.rails32
       rvm: 2.4.1
     - gemfile: spec/dummy/Gemfile
-      rvm: 2.1.10
+      rvm: 2.2.6
 
 notifications:
   slack:
