--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -6,8 +6,7 @@ eval_gemfile File.expand_path("../../../react_on_rails.gemspec", __FILE__)
 
 gem "react_on_rails", path: "../.."
 
-gem "webpacker", git: "https://github.com/shakacode/webpacker.git",
-                 branch: "issue-464-merge-webpacker-lite-into-webpacker-v5"
+gem "webpacker", "~> 3.0"
 
 # TODO: remove once we get out of beta.
 # gem 'webpacker', path: "../../../../forks/webpacker"
