--- a/package.json
+++ b/package.json
@@ -85,5 +85,9 @@
   "bugs": {
     "url": "https://github.com/shakacode/react_on_rails/issues"
   },
-  "homepage": "https://github.com/shakacode/react_on_rails#readme"
+  "homepage": "https://github.com/shakacode/react_on_rails#readme",
+  "dependencies": {
+    "react-on-rails": "^9.0.0-beta.11",
+    "react-redux": "^5.0.6"
+  }
 }
