--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
   },
   "homepage": "https://github.com/shakacode/react_on_rails#readme",
   "dependencies": {
-    "react-on-rails": "^9.0.0-beta.12",
+    "react-on-rails": "^9.0.3",
     "react-redux": "^5.0.6"
   }
 }
