fix package.json syntax that I just broke

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "babel-runtime": ">= 6",
     "js-yaml": ">= 3.0.0",
     "react": ">= 0.14",
-    "react-dom": ">= 0.14",
+    "react-dom": ">= 0.14"
   },
   "files": [
     "node_package/lib",
