--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -10,6 +10,8 @@ gem "webpacker"
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem "rails"
+gem 'bootsnap', '>= 1.1.0', require: false
+
 # Use sqlite3 as the database for Active Record
 gem "sqlite3"
 # Use SCSS for stylesheets
