--- a/spec/dummy_no_webpacker/Gemfile
+++ b/spec/dummy_no_webpacker/Gemfile
@@ -6,6 +6,8 @@ eval_gemfile File.expand_path("../../react_on_rails.gemspec", __dir__)
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem "rails"
+gem 'bootsnap', '>= 1.1.0', require: false
+
 # Use sqlite3 as the database for Active Record
 gem "sqlite3"
 # Use SCSS for stylesheets
