--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -9,8 +9,8 @@ gem "react_on_rails", path: "../.."
 gem "webpacker"
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
+gem "bootsnap", ">= 1.1.0", require: false
 gem "rails"
-gem 'bootsnap', '>= 1.1.0', require: false
 
 # Use sqlite3 as the database for Active Record
 gem "sqlite3"
